# data_disguises_lobsters

./: .gitignore  Cargo.toml  Gemfile  README.md  run_srv.sh  run_srv_and_decay.sh
applications/enctest/: Cargo.toml
applications/enctest/src/: main.rs
applications/websubmit-rs/: Cargo.toml  Rocket.toml  plot.py  run_benchmarks.sh  run_multiclient_benchmark.sh  sample-config.toml  timings.stats
applications/websubmit-rs/client/: run_benchmarks.sh
applications/websubmit-rs/client/src/: args.rs  main.rs
applications/websubmit-rs/server/: plot_server.py  run_benchmarks.sh  sample-config.toml
applications/websubmit-rs/server/src/: admin.rs  apikey.rs  args.rs  backend.rs  email.rs  main.rs  privacy.rs  questions.rs  schema.sql  tests.rs
applications/websubmit-rs/server/src/disguises/: gdpr_disguise.rs  universal_anon_disguise.rs
applications/websubmit-rs/server/templates/: delete.html.hbs  restore.html.hbs
applications/websubmit-rs/server/templates/edit_as_pseudoprincipal/: get_decryption_cap.html.hbs
applications/websubmit-rs/src/: '  args.rs  privacy.rs  tests.rs
applications/websubmit-rs/src/disguises/: universal_anon_disguise.rs
applications/websubmit-rs/stats_edna/: 20lec_10users_out.txt  20lec_20users_out.txt  20lec_30users_out.txt
applications/websubmit-rs/templates/edit_as_pseudoprincipal/: lectures.html.hbs
decor/applications/: Cargo.toml  data-import.rs  schema_lobsters.sql
decor/applications/hotcrp/: conf_anon_disguise.rs  datagen.rs  decorrelate.rs  disguise.rs  gdpr_disguise.rs  gdpr_disguise_current.rs  gdpr_removal_disguise.rs  main.rs  plot.py  policy.rs  remove.rs  schema.sql  schema_visual.dbs  spec.rs
decor/applications/hotcrp/conference_anon_disguise/: constants.rs  disguise.rs  mod.rs
decor/applications/hotcrp/datagen/: comments.rs  conflicts.rs  datagen.rs  mod.rs  papers.rs  review_preferences.rs  reviews.rs  users.rs  watches.rs
decor/applications/hotcrp/disguise/: conference_anon_constants.rs  conference_anon_disguise.rs  disguise.rs  gdpr_constants.rs  gdpr_disguise.rs  mod.rs
decor/applications/hotcrp/disguise/conference_anon/: conference_anon_disguise.rs
decor/applications/hotcrp/disguise/gdpr/: gdpr_disguise.rs
decor/applications/hotcrp/gdpr_disguise/: constants.rs  disguise.rs  mod.rs
decor/applications/lobsters/: config.json  datagen.rs  lobsters_disguise.rs  main.rs  policy.rs  schema.sql  schema_lobsters.sql
decor/applications/lobsters/microbenchmarks/: datagen.rs  main.rs  policy.rs  statistics.rs
decor/applications/lobsters/microbenchmarks/queriers/: comment.rs  expensive_queries.rs  frontpage.rs  mod.rs  post_story.rs  recent.rs  stories.rs  user.rs  vote.rs
decor/applications/lobsters/queriers/: comment.rs  frontpage.rs  recent.rs  stories.rs  user.rs  vote.rs
decor/applications/lobsters/trawler/: main.rs  queries.sql
decor/applications/prestashop/: parse_prestashop.py  policy.rs  prestashop.sql  prestashop_policy.rs
decor/src/decor/: Cargo.toml
decor/src/decor-mem/: Cargo.toml
decor/src/decor-mem/src/: config.rs  ghost.rs  ghosts_cache.rs  ghosts_map.rs  graph.rs  helpers.rs  joins.rs  lib.rs  mv_transformer.rs  policy.rs  predicates.rs  predicates_ordered.rs  qtcache.rs  query_transformer.rs  select.rs  sqlparser_cache.rs  stats.rs  views.rs
decor/src/decor-mem/src/ghosts/: ghost_entities.rs  ghost_maps.rs  mod.rs
decor/src/decor-mem/src/helpers/: column_helpers.rs  parser_helpers.rs  stats.rs
decor/src/decor-mem/src/select/: joins.rs  predicates.rs  predicates_ordered.rs  select.rs
decor/src/decor-mem/tests/: policies.rs  reinit_test.rs  schema.sql  transformer_test.rs  unsub_test.rs
decor/src/decor/src/: decorrelate.rs  disguise.rs  graph.rs  helpers.rs  history.rs  lib.rs  modify.rs  mv_transformer.rs  policy.rs  predicate.rs  qtcache.rs  querier.rs  query_transformer.rs  remove.rs  s3client.rs  spec.rs  sqlparser_cache.rs  stats.rs  subscriber.rs  types.rs  uvclient.rs  vault.rs
decor/src/decor/src/diffs/: diff.rs  diff_ctrler.rs  mod.rs  pppk.rs  token_ctrler_list.rs
decor/src/decor/src/disguises/: actions.rs  disguises.rs  history.rs  mapping.rs  mod.rs  types.rs  vault.rs
decor/src/decor/src/guises/: guise_maps.rs
decor/src/decor/src/helpers/: column_helpers.rs  helpers.rs  mod.rs  mysql_helpers.rs  parser_helpers.rs  predicates.rs  stats.rs
decor/src/decor/src/select/: predicates.rs
decor/src/decor/src/tokens/: diff_token.rs  mod.rs  ownership_token.rs  token.rs  token_ctrler.rs  token_ctrler_list.rs
decor/src/decor/src/vaults/: global_vault.rs  (+3 more)
decor/src/decor/tests/: disguise_app_test.rs  disguise_test.rs  gdpr_disguise.rs  normal_execution_test.rs  reinit_test.rs  reverse_test.rs  transformer_test.rs  unsub_test.rs
demo-app/: Cargo.toml
demo-app/src/: main.rs
edna/: Cargo.toml
edna-srv/: Cargo.toml
edna-srv/src/: apiproxy.rs  guises.rs  main.rs  tests.rs
edna-srv/src/hotcrp_disguises/: conf_anon_disguise.rs  gdpr_disguise.rs  mod.rs
edna-srv/src/lobsters_disguises/: current_delete_disguise.rs  data_decay.rs  disguise_info.rs  gdpr_disguise.rs  mod.rs
edna/src/: disguise.rs  generate_keys.rs  lib.rs  predicate.rs  spec.rs
edna/src/helpers/: helpers.rs  mod.rs  mysql_helpers.rs  parser_helpers.rs  types.rs
edna/src/tokens/: diff_token.rs  mod.rs  ownership_token.rs  privkey_token.rs  token_ctrler.rs
edna/tests/: disguise_test.rs  normal_execution_test.rs  reverse_test.rs
edna/tests/disguises/: disguise_info.rs  gdpr_disguise.rs  mod.rs  universal_anon_disguise.rs
mysql-shim/applications/: Cargo.toml
mysql-shim/applications/lobsters/: main.rs
mysql-shim/src/mysql-shim/: Cargo.toml
mysql-shim/src/mysql-shim/src/: config.rs  datatable_transformer.rs  helpers.rs  lib.rs  mv_transformer.rs  query_transformer.rs
mysql-shim/src/mysql-shim/tests/: config.json  parser_test.rs  schema.sql  transformer_test.rs
shim/: Cargo.toml
shim/src/: config.json  main.rs  schema.sql  shim.rs
shim/src/mysql-shim/: Cargo.toml
shim/src/mysql-shim/src/: config.rs  lib.rs  main.rs
shim/src/shim/: config.rs
shim/tests/: config.json  main.rs
(+590 files in other folders)
