[package]
name = "demo-app"
version = "0.1.0"
authors = ["Malte Schwarzkopf <malte@cs.brown.edu>"]
edition = "2018"

[dependencies]
rocket = "0.5.0-rc.1"
mysql = "*"
#decor = { path = "../src/decor" }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]
