[package]
name = "edna-srv"
version = "0.0.1"
authors = ["Malte Schwarzkopf <malte@cs.brown.edu>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
clap = "2.33.0"
edna = {path = "../edna"}
rocket = "0.5.0-rc.1"
slog = "2.4.0"
slog-term = "2.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"

[[bin]]
name = "edna-server"
path = "src/main.rs"
