[package]
name = "edna"
version = "0.1.0"
authors = ["Lily Tsai <tslilyai@mit.edu>"]
edition = "2018"
exclude = ["tests/testdata"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
aes = "0.7.4"
block-modes = "0.8.1"
hex = "0.4.2"
sha2 = "0.9.5"
mysql = "*"
mysql_common = "0.22"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sql-parser = { path = "../sql-parser" }
regex = "1"
rand = "0.8.4"
rsa = "0.5.0"
ordered-float = "2.0"
time = "0.2.7"
tokio = { version = "1.6.1", features = ["full"] }
hex-literal = "0.3.3"

[dev-dependencies]
datadriven = "0.1.0"
