[package]
name = "enctest"	
version = "0.1.0"
authors = ["Lily Tsai <tslilyai@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.13.0"
log = "0.4.0"
edna = { path = "../../edna", package = "edna" }
env_logger = "0.8.4"
rand = "0.8.4"
rsa = "0.5.0"
time = "0.2.7"

[[bin]]
name = "lobsters"
path = "src/main.rs"
doc = false
