[package]
name = "decor-applications"
authors = ["Lily Tsai<tslilyai@mit.edu>"]
version = "0.1.0"
edition = '2018'
publish = false

[dependencies]
decor = { path = "../src/decor", package = "decor" }
mysql = "*"
mysql_common = "0.22"
log = "0.4"
env_logger = "0.7.1"
rand = "0.6.5"

[[bin]]
name = "lobsters"
path = "lobsters/main.rs"
doc = false
