[package]
name = "decor-applications"
authors = ["Lily Tsai<tslilyai@mit.edu>"]
version = "0.1.0"
edition = '2018'
publish = false

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
clap = "2.25.0"
#decor = { path = "../src/decor-mysql", package = "decor-mysql" }
decor = { path = "../src/decor-mem", package = "decor-mem" }
env_logger = "0.7.1"
futures-core = "0.3.0"
futures-util = "0.3.0"
mysql = "*"
mysql_async = "0.23.0"
mysql_common = "0.22"
log = "0.4"
rand = "0.6.5"
rand_core = "0.5.1"
rand_pcg = "0.2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", default-features=false }
hwloc = "0.5.0"
libc = "0.2"
tower-service = "0.3.0"
trawler = "0.11.0-alpha.4"

[[bin]]
name = "lobsters-microbenchmarks"
path = "lobsters/microbenchmarks/main.rs"
doc = false
