[package]
name = "decor-applications"
authors = ["Lily Tsai<tslilyai@mit.edu>"]
edition = '2020'
publish = false

[dependencies]
mysql_shim = { path = "../mysql-shim", package = "mysql-shim" }
mysql = "*"
mysql_common = "0.22"
log = "0.4"
env_logger = "0.7.1"

[[bin]]
name = "lobsters"
path = "lobsters/main.rs"
doc = false
