[package]
name = "decor-mem"
version = "0.1.0"
authors = ["Lily Tsai <tslilyai@mit.edu>"]
edition = "2018"
exclude = ["tests/testdata"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mysql = "*"
msql-srv = { path = "../msql-srv" }
sql-parser = { path = "../sql-parser" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
mysql_common = "0.22"
log = "0.4"
env_logger = "0.7.1"
#lru = "0.6.0"

[dev-dependencies]
datadriven = "0.1.0"
