[package]
name = "decor-mem"
version = "0.1.0"
authors = ["Lily Tsai <tslilyai@mit.edu>"]
edition = "2018"
exclude = ["tests/testdata"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.7.1"
log = "0.4"
msql-srv = { path = "../msql-srv" }
mysql = "*"
mysql_common = "0.22"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sql-parser = { path = "../sql-parser" }
regex = "1"

[dev-dependencies]
datadriven = "0.1.0"
