[package]
name = "decor"
version = "0.1.0"
authors = ["Lily Tsai <tslilyai@mit.edu>"]
edition = "2018"
exclude = ["tests/testdata"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.7.1"
rust-crypto = "^0.2"
hex = "0.4.2"
log = "0.4"
mysql = "*"
mysql_common = "0.22"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sql-parser = { path = "../sql-parser" }
regex = "1"
rand = "0.6.5"
ordered-float = "2.0"
rusoto_s3 = "0.46.0"
rusoto_core = "0.46.0"
rusoto_credential = "0.46.0"
time = "0.2.7"
futures="0.3"

[dev-dependencies]
datadriven = "0.1.0"
